# hyper-auth-proxy

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
doc/: auth_token.drawio
example/: main_with_b64decoder.rs  main_with_config.rs
src/: cookies.rs  errors.rs  lib.rs  main.rs  redis_session.rs
tests/: test_http.rs  test_http_with_decoder.rs
