[package]
name = "auth-proxy"
version = "0.1.0"
authors = ["Bruno Thomas <bthomas@iroco.fr>"]
license = "Apache-2.0"
description = "A simple auth reverse proxy, to authenticate via simple auth from a redis store."
repository = "https://github.com/iroco-co/auth-proxy"
keywords = ["http", "hyper"]
categories = ["network-programming", "web-programming"]
readme = "README.md"
edition = "2018"


[dependencies]
hyper-reverse-proxy = { path = "../hyper-reverse-proxy" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "0.3", features = ["full"] }