[package]
name = "auth-proxy"
version = "0.1.0"
authors = ["Bruno Thomas <bthomas@iroco.fr>"]
license = "Apache-2.0"
description = "A simple auth reverse proxy, to authenticate via simple auth from a redis store."
repository = "https://github.com/iroco-co/auth-proxy"
keywords = ["http", "hyper"]
categories = ["network-programming", "web-programming"]
readme = "README.md"
edition = "2018"

[dependencies.redis]
version = "0.21.0"
features = ["aio", "tokio-comp"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "std"] }
hyper-reverse-proxy = { git = "https://github.com/iroco-co/hyper-reverse-proxy" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
base64 = "0.20.0-alpha.1"
sha2 = "0.10"
jwt = "0.16"
cookie = "0.16"
futures = "0.3"
log = "0.4.14"
env_logger = "0.9.0"

[dev-dependencies]
tokio-test = "*"
serial_test = "*"
chrono = "*"
test-context = "*"
async-trait = "0.1"
tokiotest-httpserver = "0.1"
